<resources>
    <string name="app_name">Practical</string>
    <string name="title_activity_base">BaseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_full_name">Enter Full Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="error_empty_full_name">Please enter full name</string>
    <string name="error_empty_email">Please enter email id</string>
    <string name="error_valid_email">Please enter valid email id</string>
    <string name="error_empty_password">Please enter password</string>
    <string name="error_valid_password">Password must be max 6 characters including upper/lowercase, special character and numbers.</string>
    <string name="login">Login</string>
    <string name="text_not_a_member">Not a member? <u>Sign up</u></string>
    <string name="take_picture">Take picture</string>
    <string name="open_gallery">Open from gallery</string>
    <string name="select_profile_pic">Select profile pic</string>
    <string name="cancel">Cancel</string>
    <string name="select_picture">Select picture</string>
    <string name="denied_permission">Permission Denied!</string>
    <string name="email_exists">Email already exists</string>
    <string name="error_empty_profile">Please upload profile picture</string>
    <string name="on_going">On Going</string>
    <string name="completed">Completed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_main">Main</string>
    <string name="text_logout">Logout</string>
    <string name="text_profile">My Profile</string>
    <string name="text_lorem_ipsum">Lorem Ipsum</string>
    <string name="hint_task_title">Enter Task Title</string>
    <string name="hint_task_description">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="hint_remind_date_time"><![CDATA[Select Remind Date & Time]]></string>
    <string name="hint_due_date">Select Due Date</string>
    <string name="update">Update</string>
    <string name="my_ptofile">My Profile</string>
    <string name="logout_str">Are you sure want to logout?</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="error_empty_task_title">Please enter task title</string>
    <string name="error_empty_task_description">Please enter task description</string>
    <string name="error_empty_remind_me"><![CDATA[Please select remind me date & time]]></string>
    <string name="error_empty_due_date">Please select due date</string>
    <string name="text_add_task">Add Task</string>
    <string name="task_added">Task Added Successfully!</string>
</resources>