<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity=""
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp">

                <ImageView
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:src="@drawable/splash_icon"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_24sdp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="@dimen/_2sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/color_grey"
                            android:textSize="@dimen/_11ssp"
                            android:padding="@dimen/_8sdp"/>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_8sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/_8sdp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/ed_password"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@null"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:lines="1"
                                android:textColor="@color/colorBlack"
                                android:textColorHint="@color/color_grey"
                                android:textSize="@dimen/_11ssp" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_password"
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_gravity="end"
                                android:src="@drawable/ic_visible_password"/>

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardBackgroundColor="@color/purple_500"
                    android:layout_marginTop="@dimen/_24sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:padding="@dimen/_8sdp"/>


                </androidx.cardview.widget.CardView>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/text_not_a_member"
                    android:textColor="@color/purple_500"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>
