<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingTop="@dimen/_20sdp"
            android:paddingBottom="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity=""
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingStart="@dimen/_16sdp"
                android:paddingEnd="@dimen/_16sdp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/iv_user_profile"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:src="@drawable/place_holder"
                        app:civ_border_color="@color/color_grey"
                        app:civ_border_width="0.1dp" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_edit"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:src="@drawable/ic_profile_picture_edit"
                        android:layout_alignParentBottom="true"
                        android:layout_alignRight="@+id/iv_user_profile"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_24sdp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="@dimen/_2sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ed_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/hint_full_name"
                            android:inputType="textPersonName|textCapWords"
                            android:lines="1"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/color_grey"
                            android:textSize="@dimen/_11ssp"
                            android:padding="@dimen/_8sdp"/>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_8sdp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/color_grey"
                            android:textSize="@dimen/_11ssp"
                            android:padding="@dimen/_8sdp"/>

                    </androidx.cardview.widget.CardView>


                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardUseCompatPadding="true"
                        app:cardElevation="@dimen/_2sdp"
                        android:layout_marginTop="@dimen/_8sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/_8sdp">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/ed_password"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@null"
                                android:hint="@string/hint_password"
                                android:inputType="textPassword"
                                android:lines="1"
                                android:textColor="@color/colorBlack"
                                android:textColorHint="@color/color_grey"
                                android:textSize="@dimen/_11ssp" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_password"
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_gravity="end"
                                android:src="@drawable/ic_visible_password"/>

                        </LinearLayout>


                    </androidx.cardview.widget.CardView>


                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardBackgroundColor="@color/purple_500"
                    android:layout_marginTop="@dimen/_24sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:padding="@dimen/_8sdp"/>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</layout>
